# tiptapy

./: .flake8  .gitignore  Makefile  mypy.ini  pyproject.toml  setup.py
tests/: test_codeblock.py  test_table.py
tiptapy/: __init__.py  macros.py
tiptapy/templates/: codeBlock.html  doc.html  fallback.html  resizableImage.html  table.html  tableCell.html  tableHeader.html  tableRow.html
